--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
         <title>Webpack App</title>
     </head>
     <body>
-        <h1>Hello world!</h1>
-        <h2>Tip: Check your console</h2>
+        <main></main>
     </body>
-    
     <script>
         if ("serviceWorker" in navigator) {
             window.addEventListener("load", () => {
